# autopilot-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml  build.rs
.github/workflows/: build.yaml
examples/: hello_world_keyboard.rs  screengrab.rs  scroll_mouse.rs  sine_mouse_wave.rs
examples/hello_world_alert/: Cargo.toml
examples/hello_world_alert/src/: main.rs
examples/hello_world_keyboard/: Cargo.toml
examples/hello_world_keyboard/src/: main.rs
examples/screengrab/: Cargo.toml
examples/screengrab/src/: main.rs
examples/scroll_mouse/: Cargo.toml
examples/sine_mouse_wave/: Cargo.toml
examples/sine_mouse_wave/src/: main.rs
src/: alert.rs  bitmap.rs  geometry.rs  internal.rs  key.rs  lib.rs  mouse.rs  screen.rs
tests/: bitmap.rs
