[package]
name = "autopilot"
version = "0.4.1"
authors = ["Michael Sanders <crates@michaelsande.rs>"]
description = "A simple, cross-platform GUI automation library for Rust."
homepage = "https://www.autopy.org"
readme = "README.md"
repository = "https://github.com/autopilot-rs/autopilot-rs"
license = "MIT OR Apache-2.0"
keywords = ["cross-platform", "gui" ,"automation", "input", "simulation"]
categories = [
    "api-bindings",
    "gui",
    "os::macos-apis",
    "os::unix-apis",
    "os::windows-apis"
]

[dependencies]
image = "0.22"
libc = "0.2"
rand = "0.7"
scopeguard = "1.1"

[dev-dependencies]
quickcheck = "0.9"

[build-dependencies]
pkg-config = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.7.0"
core-graphics = { version = "0.19.0", features = ["highsierra"] }
cocoa = "0.20.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.18.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = ["libloaderapi", "minwindef", "winbase", "winuser"] }
