[package]
name = "autopilot"
version = "0.4.1"
edition = "2015"
authors = ["Michael Sanders <crates@michaelsande.rs>"]
description = "A simple, cross-platform GUI automation library for Rust."
homepage = "https://www.autopy.org"
readme = "README.md"
repository = "https://github.com/autopilot-rs/autopilot-rs"
license = "MIT OR Apache-2.0"
keywords = ["cross-platform", "gui", "automation", "input", "simulation"]
categories = [
    "api-bindings",
    "gui",
    "os::macos-apis",
    "os::unix-apis",
    "os::windows-apis",
]

[dependencies]
image = "0.25.6"
libc = "0.2.174"
rand = "0.9.2"
scopeguard = "1.2.0"

[dev-dependencies]
quickcheck = "1.0.3"

[target.'cfg(target_os = "linux")'.build-dependencies]
pkg-config = "0.3.32"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.7.0"
core-graphics = { version = "0.19.0", features = ["highsierra"] }
cocoa = "0.20.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.4", features = [
    "libloaderapi",
    "minwindef",
    "winbase",
    "winuser",
] }
